src changes for the .html

--- a/src/nifi.html
+++ b/src/nifi.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div id="main">
-            <iframe frameborder="0" onload="this.width=screen.width-205;this.height=screen.height;" src="http://10.143.224.240:9090/nifi/"></iframe>
+            <iframe frameborder="0" onload="this.width=screen.width-205;this.height=screen.height;" src="about:blank"></iframe>
         </div>
     </div>
 
