--- a/src/base-svoc.html
+++ b/src/base-svoc.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div id="main">
-            <iframe frameborder="0" onload="this.width=screen.width-205;this.height=screen.height;" src="http://10.143.224.240:8983/solr/sbsabanana/sbsabanana/dashboard.html#/dashboard?kbnType=file&kbnId=svoc.json"></iframe>
+            <iframe frameborder="0" onload="this.width=screen.width-205;this.height=screen.height;" src="./dashboard.html#/dashboard?kbnType=file&kbnId=svoc.json"></iframe>
         </div>
     </div>
 
